--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html,body{
 .corousel-inner img{
 	width: 100%
 	height:100%;
+	background-size: cover;
 }
 
 .carousel-caption{
@@ -134,6 +135,7 @@ hr.light-100{
 }
 .carousel-caption .btn{
 	font-size: 95%;
+	margin-top:130px;
 	padding:8px 14px;
 }
 .display-4{
